# simple-dns-server

./: CMakeLists.txt  client.cpp  client.h  dns.cpp  dns.h  main.cpp  server.cpp  server.h  shared.h  udp_dns_server.cpp  udp_dns_server.h
